# desc-hub

./: .env.example  .gitignore  README.md  formato_descrições  pyproject.toml  run.py
data/templates/: README.md  anel_vedacao.yaml  disco_aco.yaml  disco_friccao.yaml  disco_friccao_trans.yaml  filtro.yaml  friction_clutch_pack.yaml  jogo_discos_aco.yaml  kit_completo.yaml  kit_ferramentas.yaml  kit_reparo_orings.yaml  kit_rolamento.yaml  mola.yaml  rebite.yaml  rolamento_axial_agulha.yaml  rolamento_radial.yaml  rolete_rolamento.yaml  sprag_roda_livre.yaml  tampa_bocal.yaml  transmission_band.yaml  valvula.yaml
scripts/: aplicar_correcao_ncm.py  extrair_discos_aba.py  merge_discos_de_volta.py
src/: __init__.py  acesso.py  catalogo.py  cli.py  config.py  configuracoes.py  conversores.py  db.py  descricao.py  dominio.py  extracao.py  imagens.py  importacao.py  llm.py  pipeline.py  produto.py  saida.py  siscomex.py  specs.py  web.py
src/frontend/: app.js  index.html  style.css
src/invoice/: __init__.py  alto.py  base.py  gearbox.py  psbearings.py  sonnax.py  tricomponent.py
tests/: test_gearbox_parser.py  test_raybestos_lookup.py  test_templates.py
