[project]
name = "importa-descricoes"
version = "0.1.0"
description = "Pipeline de invoice -> descrição DUIMP/Siscomex para autopeças de transmissão automática"
requires-python = ">=3.12"
authors = [{name = "Leonardo"}]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pymupdf>=1.24",
    "httpx>=0.27",
    "pyyaml>=6",
    "openpyxl>=3.1",
    "selectolax>=0.3",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
